--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Team Homepage</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <!-- Logo and Navigation Panel -->
+  <header>
+    <img src="assets/logo.png" alt="Team Logo" class="logo">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="team/member1.html">Member 1</a></li>
+        <li><a href="team/member2.html">Member 2</a></li>
+        <li><a href="team/member3.html">Member 3</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Main Content -->
+  <main>
+    <h1>Welcome to Our Team Website</h1>
+    <p>We are a group of dedicated students working on exciting projects. Here you can learn more about each of us and the work we do together.</p>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2024 Our Team. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
