--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
+<body>
+  <header>
+    <img src="assets/logo.png" alt="Team Logo" class="logo">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="team/member1.html">Member 1</a></li>
+        <li><a href="team/member2.html">Member 2</a></li>
+        <li><a href="team/member3.html">Member 3</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Contact Us</h1>
+    <p>Email: team@example.com</p>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 Our Team. All rights reserved.</p>
+  </footer>
+</body>
+</html>
 
