--- a/index.html
+++ b/index.html
@@ -3,36 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Our Team Website</title>
+  <title>Team Website</title>
   <link rel="stylesheet" href="css/styles.css">
-  <script defer src="js/script.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Hero Section -->
-  <section id="hero">
-    <div class="hero-content">
-      <h1>Welcome to Our Team Website</h1>
-      <p>Meet our talented team and explore our projects.</p>
-      <a href="#about" class="btn">Learn More</a>
-    </div>
-  </section>
-
-  <!-- Navigation Panel -->
+  <!-- Header and Navigation -->
   <header>
     <img src="assets/logo.png" alt="Team Logo" class="logo">
     <nav>
       <ul>
         <li><a href="#hero">Home</a></li>
+        <li><a href="#about">About</a></li>
         <li><a href="#team">Team</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
   </header>
 
+  <!-- Hero Section -->
+  <section id="hero">
+    <div class="hero-content">
+      <h1>Discover Our Team</h1>
+      <p>Join us as we build the future of finance.</p>
+      <a href="#about" class="btn">Learn More</a>
+    </div>
+  </section>
+
   <!-- About Section -->
   <section id="about">
-    <h2>About Our Team</h2>
-    <p>We are a group of dedicated students working on exciting projects. Learn more about each of us below.</p>
+    <h2>About Us</h2>
+    <p>We are a group of students passionate about technology, finance, and design.</p>
   </section>
 
   <!-- Team Section -->
@@ -40,15 +41,15 @@
     <h2>Meet the Team</h2>
     <div class="team-members">
       <a href="team/member1.html" class="team-card">
-        <img src="assets/headshots/member1.jpg" alt="Member 1 Headshot">
+        <img src="assets/headshots/member1.jpg" alt="Member 1">
         <h3>Member 1</h3>
       </a>
       <a href="team/member2.html" class="team-card">
-        <img src="assets/headshots/member2.jpg" alt="Member 2 Headshot">
+        <img src="assets/headshots/member2.jpg" alt="Member 2">
         <h3>Member 2</h3>
       </a>
       <a href="team/member3.html" class="team-card">
-        <img src="assets/headshots/member3.jpg" alt="Member 3 Headshot">
+        <img src="assets/headshots/member3.jpg" alt="Member 3">
         <h3>Member 3</h3>
       </a>
     </div>
@@ -57,7 +58,7 @@
   <!-- Contact Section -->
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>If you have any questions, feel free to reach out to us at: <a href="mailto:team@example.com">team@example.com</a></p>
+    <p>Reach out at: <a href="mailto:team@example.com">team@example.com</a></p>
   </section>
 
   <!-- Footer -->
