--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
         <img src="assets/headshots/member3.jpg" alt="Member 3">
         <h3>Member 3</h3>
       </a>
+      <a href="team/member4.html" class="team-card">
+        <img src="assets/headshots/member4.jpg" alt="Member 4">
+        <h3>Member 4</h3>
+      </a>
     </div>
   </section>
 
