new sections and member headshot file type change

--- a/team/member1.html
+++ b/team/member1.html
@@ -22,13 +22,77 @@
 
   <main>
     <h1>Member 1</h1>
-    <img src="../assets/headshots/member1.jpg" alt="Member 1 Headshot" class="headshot">
-    <p>Hi, I'm Member 1. I specialize in web development and design. I enjoy working on projects that involve front-end development and creating user-friendly interfaces.</p>
-  </main>
+    <img src="../assets/headshots/member1.png" alt="Member 1 Headshot" class="headshot">
+    <p>
+      Hi, I have always been captivated by the intricate and analytical nature of finance, where every number tells a story and every decision requires a deep understanding of markets, trends, and data. My passion for finance and technology converges in the realm of fintech, where innovation transforms how we perceive and interact with money. I thrive on solving complex problems, leveraging data, and developing strategies that combine cutting-edge technology with financial insights. In the future, I aspire to work in the field of quantitative finance, focusing on developing predictive models and advanced trading algorithms that optimize portfolio performance and drive decision-making. I am also deeply interested in exploring the intersection of artificial intelligence and finance, creating tools that make financial services more accessible and efficient for people and businesses worldwide. My goal is to contribute to shaping the future of finance, blending analytical rigor with creative innovation to deliver impactful solutions.
+    </p>
+
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Quantitative Analysis</li>
+        <li>Portfolio Optimization</li>
+        <li>Programming Languages: Python, Java, kdb+/q</li>
+        <li>Data Visualization: Tableau, Matplotlib</li>
+        <li>Machine Learning and Predictive Modeling</li>
+        <li>Financial Modeling and Valuation</li>
+      </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>Financial Market Simulation Tool:</strong> Developed a Python-based application to simulate market scenarios and optimize trading strategies using Monte Carlo methods and GARCH models.
+        </li>
+        <li>
+          <strong>Portfolio Diversification Model:</strong> Created a model that analyzes risk-return trade-offs and suggests optimal asset allocations using the Sharpe Ratio.
+        </li>
+        <li>
+          <strong>Fintech Research Paper:</strong> Conducted a study on the role of AI in enhancing accessibility to financial services in emerging markets.
+        </li>
+      </ul>
+    </section>
+
+    <!-- Interests Section -->
+    <section id="interests">
+      <h2>Interests</h2>
+      <p>
+        Outside of finance and fintech, I enjoy exploring the intersection of technology and economics, staying updated with global market trends, and analyzing innovative startups. 
+        I enjoy gaming, reading history books, and working on personal coding projects in my free time.
+      </p>
+    </section>
+
+    <!-- Goals Section -->
+    <section id="goals">
+      <h2>Future Goals</h2>
+      <p>
+        In the next decade, I aspire to work as a quantitative analyst or fintech entrepreneur, leveraging data-driven insights to create impactful financial solutions. 
+        My long-term vision includes founding my own fintech company, focusing on democratizing financial literacy and accessibility for underrepresented markets.
+      </p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>
+        Feel free to connect with me on <a href="https://linkedin.com" target="_blank">LinkedIn</a> or email me at <a href="mailto:your-email@example.com">your-email@example.com</a>.
+      </p>
+    </section>
+
+    <!-- Fun Facts Section -->
+    <section id="fun-facts">
+      <h2>Fun Facts</h2>
+      <ul>
+        <li>I play Apex Legends if I have time.</li>
+        <li>I’m currently trying to lear French.'</li>
+      </ul>
+    </section>
 
   <footer>
     <p>&copy; 2024 Our Team. All rights reserved.</p>
   </footer>
 </body>
 </html>
-
