--- a/team/member1.html
+++ b/team/member1.html
@@ -87,7 +87,7 @@
       <h2>Fun Facts</h2>
       <ul>
         <li>I play Apex Legends if I have time.</li>
-        <li>I’m currently trying to lear French.'</li>
+        <li>I’m currently trying to lear French.</li>
       </ul>
     </section>
 
