--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section id="hero">
     <div class="hero-content">
       <h1>Discover Our Team</h1>
-      <p>Join us as we build the future of finance.</p>
+      <p>Join us.</p>
       <a href="#about" class="btn">Learn More</a>
     </div>
   </section>
@@ -33,7 +33,7 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Us</h2>
-    <p>We are a group of students passionate about technology, finance, and design.</p>
+    <p>We are a group of students passionate about technology.</p>
   </section>
 
   <!-- Team Section -->
@@ -41,19 +41,19 @@
     <h2>Meet the Team</h2>
     <div class="team-members">
       <a href="team/member1.html" class="team-card">
-        <img src="assets/headshots/member1.jpg" alt="Member 1">
+        <img src="../assets/headshots/member1.png" alt="Member 1 Headshot" class="headshot">
         <h3>Member 1</h3>
       </a>
       <a href="team/member2.html" class="team-card">
-        <img src="assets/headshots/member2.jpg" alt="Member 2">
+        <img src="../assets/headshots/member2.png" alt="Member 2 Headshot" class="headshot">
         <h3>Member 2</h3>
       </a>
       <a href="team/member3.html" class="team-card">
-        <img src="assets/headshots/member3.jpg" alt="Member 3">
+        <img src="../assets/headshots/member3.png" alt="Member 3 Headshot" class="headshot">
         <h3>Member 3</h3>
       </a>
       <a href="team/member4.html" class="team-card">
-        <img src="assets/headshots/member4.jpg" alt="Member 4">
+        <img src="../assets/headshots/member4.png" alt="Member 4 Headshot" class="headshot">
         <h3>Member 4</h3>
       </a>
     </div>
