--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h2>Meet the Team</h2>
     <div class="team-members">
       <a href="team/member1.html" class="team-card">
-        <img src="../assets/headshots/member1.png" alt="Member 1 Headshot" class="headshot">
+        <img src="assets/headshots/member1.png" alt="Member 1 Headshot" class="headshot">
         <h3>Member 1</h3>
       </a>
       <a href="team/member2.html" class="team-card">
