--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <section id="team">
     <h2>Meet the Team</h2>
     <div class="team-members">
-      <a href="team/member1.html" class="team-card">
+      <a href="team/member1.html">
         <img src="assets/headshots/member1.png" alt="Member 1 Headshot" class="headshot">
         <h3>Member 1</h3>
       </a>
