--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
         <h3>Member 1</h3>
       </a>
       <a href="team/member2.html" class="team-card">
-        <img src="../assets/headshots/member2.png" alt="Member 2 Headshot" class="headshot">
+        <img src="assets/headshots/member2.png" alt="Member 2 Headshot" class="headshot">
         <h3>Member 2</h3>
       </a>
       <a href="team/member3.html" class="team-card">
-        <img src="../assets/headshots/member3.png" alt="Member 3 Headshot" class="headshot">
+        <img src="assets/headshots/member3.png" alt="Member 3 Headshot" class="headshot">
         <h3>Member 3</h3>
       </a>
       <a href="team/member4.html" class="team-card">
-        <img src="../assets/headshots/member4.png" alt="Member 4 Headshot" class="headshot">
+        <img src="assets/headshots/member4.png" alt="Member 4 Headshot" class="headshot">
         <h3>Member 4</h3>
       </a>
     </div>
