--- a/team/member2.html
+++ b/team/member2.html
@@ -22,8 +22,8 @@
 
   <main>
     <h1>Member 1</h1>
-    <img src="../assets/headshots/member1.jpg" alt="Member 1 Headshot" class="headshot">
-    <p>Hi, I'm Member 1. I specialize in web development and design. I enjoy working on projects that involve front-end development and creating user-friendly interfaces.</p>
+    <img src="../assets/headshots/member2.png" alt="Member 2 Headshot" class="headshot">
+    <p>Hi, I'm Member 2. I specialize in web development and design. I enjoy working on projects that involve front-end development and creating user-friendly interfaces.</p>
   </main>
 
   <footer>
