--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
         <li><a href="team/member1.html">Member 1</a></li>
         <li><a href="team/member2.html">Member 2</a></li>
         <li><a href="team/member3.html">Member 3</a></li>
+        <li><a href="team/member4.html">Member 3</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
