--- a/team/member2.html
+++ b/team/member2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Member 1</title>
+  <title>Member 2</title>
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -16,7 +16,6 @@
         <li><a href="member2.html">Member 2</a></li>
         <li><a href="member3.html">Member 3</a></li>
         <li><a href="member4.html">Member 4</a></li>
-        
         <li><a href="../contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -24,9 +23,66 @@
 
   <main>
     <h1>Member 1</h1>
-    <img src="../assets/headshots/member2.png" alt="Member 2 Headshot" class="headshot">
-    <p>Hi, I'm Member 2. I specialize in web development and design. I enjoy working on projects that involve front-end development and creating user-friendly interfaces.</p>
-  </main>
+    <img src="../assets/headshots/member2.jpg" alt="Member 2 Headshot" class="headshot">
+    <p>
+      Hello this is MD Rashidul Hoque. I am majoring in CIT and I love learning coding. I love to do co-curricular activities. I can dance ,rap ,act , plan and many more. I love to cook food. Want to taste the best food in the world? try my dish </p>
+
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Event planning</li>
+        <li>Organizing and anchoring</li>
+        <li>Programming Languages: Python, Java</li>
+        <li>I am good in analyzing problems</li>
+        <li>Machine Learning and Predictive Modeling</li>
+        <li>Co-curricular activities</li>
+      </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>PYTHON PROJECT:</strong> Created sanke game in the project for python.</li>
+        <li>
+          <strong>DATABASE PROJECT:</strong> Created a database short site to store details for the project</li>
+      </ul>
+    </section>
+
+    <!-- Interests Section -->
+    <section id="interests">
+      <h2>Interests</h2>
+      <p>
+        I like to media works. So, I learned dance, poetry, acting by my ownself. I like photo shooting.
+      </p>
+    </section>
+
+    <!-- Goals Section -->
+    <section id="goals">
+      <h2>Future Goals</h2>
+      <p>
+       I want to create softwares which will help the general people to make their life more upgraded.
+      </p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>
+        email me at <a href="mailto:your-mdrashidul.hoque@mnsu.com">your-mdrashidul.hoque@mnsu.edu.com</a>.
+      </p>
+    </section>
+
+    <!-- Fun Facts Section -->
+    <section id="fun-facts">
+      <h2>Fun Facts</h2>
+      <ul>
+        <li>I can read peoples mind.</li>
+        <li>I am trying start blogging</li>
+      </ul>
+    </section>
 
   <footer>
     <p>&copy; 2024 Our Team. All rights reserved.</p>
