--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h3>Member 1</h3>
     </a>
     <a href="team/member2.html" class="team-card">
-      <img src="assets/headshots/member2.png" alt="Member 2 Headshot" class="headshot">
+      <img src="assets/headshots/member2.jpg" alt="Member 2 Headshot" class="headshot">
       <h3>Member 2</h3>
     </a>
     <a href="team/member3.html" class="team-card">
@@ -53,7 +53,7 @@
       <h3>Member 3</h3>
     </a>
     <a href="team/member4.html" class="team-card">
-      <img src="assets/headshots/member4.png" alt="Member 4 Headshot" class="headshot">
+      <img src="assets/headshots/headshot.jpg" alt="Member 4 Headshot" class="headshot">
       <h3>Member 4</h3>
     </a>
   </div>
