--- a/team/member3.html
+++ b/team/member3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Member 1</title>
+  <title>Member 2</title>
   <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -22,10 +22,64 @@
   </header>
 
   <main>
-    <h1>Member 1</h1>
-    <img src="../assets/headshots/member3.png" alt="Member 3 Headshot" class="headshot">
-    <p>Hi, I'm Member 3. I specialize in web development and design. I enjoy working on projects that involve front-end development and creating user-friendly interfaces.</p>
-  </main>
+    <h1>Member 2</h1>
+    <img src="../assets/headshots/member3.jpg" alt="Member 3 Headshot" class="headshot">
+    <p>
+      Hello, my name is Lakshman S. Bika ("Lucky"). I am an aspiring software engineer with experience in Python, Java, SQL and some front end-development that i picked up while working on this project. I am also interested in exploring Game Development and Data Analysis. Moreover i am passionate toward learning and discovering new things. </p>
+
+    <!-- Skills Section -->
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Java, Python, Latex, SQL</li>
+        <li>Problem Solving</li>
+        <li>Communication and Counseling</li>
+        <li>Excel, Word, PowerPoint</li>
+      </ul>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>PYTHON PROJECT:</strong>Created a Maze Game with python using py-game, featuring custom-designed graphics and icons. </li>
+        <li>
+          <strong>PYTHON PROJECT:</strong> Developed a web scraping application using Python and Selenium to monitor and track GPU prices. </li>
+      </ul>
+    </section>
+
+    <!-- Interests Section -->
+    <section id="interests">
+      <h2>Interests</h2>
+      <p>
+        Data Analysis, Volunteering, Gaming and Sports like : Badminton, Basketball and Table Tennis. Currently trying to learn to play guitar.
+      </p>
+    </section>
+
+    <!-- Goals Section -->
+    <section id="goals">
+      <h2>Future Goals</h2>
+      <p>
+      I would like to learn more and be a Software Engineer. Later on, Maybe I would like to open a business of my own.I would like to travel to Europe and other parts of the world i haven't been to yet.
+      </p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+      <h2>Contact Me</h2>
+      <p>
+        email me at <a href="mailto:your-bikalakshman@gmail.com">your-bikalakshman@gmail.com.</a>.
+      </p>
+    </section>
+
+    <!-- Fun Facts Section -->
+    <section id="fun-facts">
+      <h2>Fun Facts</h2>
+      <ul>
+        <li>Almost Quadrilingual.</li>
+      </ul>
+    </section>
 
   <footer>
     <p>&copy; 2024 Our Team. All rights reserved.</p>
