--- a/team/member3.html
+++ b/team/member3.html
@@ -23,7 +23,7 @@
 
   <main>
     <h1>Member 2</h1>
-    <img src="../assets/headshots/member3.jpg" alt="Member 3 Headshot" class="headshot">
+    <img src="../assets/headshots/member3.png" alt="Member 3 Headshot" class="headshot">
     <p>
       Hello, my name is Lakshman S. Bika ("Lucky"). I am an aspiring software engineer with experience in Python, Java, SQL and some front end-development that i picked up while working on this project. I am also interested in exploring Game Development and Data Analysis. Moreover i am passionate toward learning and discovering new things. </p>
 
