--- a/team/member2.html
+++ b/team/member2.html
@@ -71,7 +71,7 @@
     <section id="contact">
       <h2>Contact Me</h2>
       <p>
-        email me at <a href="mailto:your-mdrashidul.hoque@mnsu.com">your-mdrashidul.hoque@mnsu.edu.com</a>.
+        email me at <a href="mailto:mdrashidul.hoque@mnsu.com">your-mdrashidul.hoque@mnsu.edu.com</a>.
       </p>
     </section>
 
